Stabilize GLM README summary pipeline and diagnostics